--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <div id="edit">
         <input name="txt" type="text" id="editText" >
         
-        <button id="editChange"    >⭕</button>
+        <button id="editChange"    >Update</button>
        </div>
 
     </section>
