--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div id="notes">
             
             <div class="input">
-                <input name="desc" id="addTxt" {taskinput}></input>
-                <input name="txt" type="text" id="editText" {saveindex} hidden >
-                <button id="addBtn" class="button" {add} >Add note</button>
-                <button id="editChange" style="display: none;" {save} >Update</button>
+                <input name="desc" id="addTxt" ></input>
+                <input name="txt" type="text" id="editText" hidden >
+                <button id="addBtn" class="button" >Add note</button>
+                <button id="editChange" style="display: none;"  >Update</button>
 
             </div>
             
